@@ -78,3 +78,21 @@ log4j.appender.aliases.Append=true
 log4j.appender.aliases.File=logs/aliases.log
 log4j.appender.aliases.layout=org.apache.log4j.PatternLayout
 log4j.appender.aliases.layout.ConversionPattern=%d %p [%c] - %m%n
+
+######## assocs inserted
+log4j.logger.insertedAssociations=debug, insertedAssociations
+log4j.appender.insertedAssociations=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.insertedAssociations.DatePattern='.'yyyy-MM
+log4j.appender.insertedAssociations.Append=true
+log4j.appender.insertedAssociations.File=logs/insertedAssociations.log
+log4j.appender.insertedAssociations.layout=org.apache.log4j.PatternLayout
+log4j.appender.insertedAssociations.layout.ConversionPattern=%d %p [%c] - %m%n
+
+######## assocs deleted
+log4j.logger.deletedAssociations=debug, deletedAssociations
+log4j.appender.deletedAssociations=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.deletedAssociations.DatePattern='.'yyyy-MM
+log4j.appender.deletedAssociations.Append=true
+log4j.appender.deletedAssociations.File=logs/deletedAssociations.log
+log4j.appender.deletedAssociations.layout=org.apache.log4j.PatternLayout
+log4j.appender.deletedAssociations.layout.ConversionPattern=%d %p [%c] - %m%n
