@@ -1,3 +1,6 @@
+Feb 26, 2020
+  implemented loading of associations
+
 Feb 24, 2020
   finished cell lines loading: inserts, deletes and updates
   implemented loading of aliases
